--- a/index.html
+++ b/index.html
@@ -30,6 +30,44 @@
         </div>
     </header>
 
+    <section class="s-hero">
+        <div class="container">
+            <div class="text">
+                <h3>Abra sua conta, é só baixar o app</h3>
+                <h1>A conta digital certa para cuidar bem do seu dinheiro</h1>
+                <button class="btn-primary">Abra sua conta digital</button>
+                <ul>
+                    <li>
+                        <div class="icon">
+                            <img src="img/icon-anuidade.svg" alt="Icone Anuidade">
+                        </div>
+                        <span>Cartão sem <br> anuidade</span>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="img/icon-conta-digital.svg" alt="Icone conta digital">
+                        </div>
+                        <span>Conta digital <br> 100% grátis</span>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="img/icon-dinheiro.svg" alt="Icone dinheiro">
+                        </div>
+                        <span>Seu dinheiro <br> rendendo mais</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="area-image">
+                <h2>Banco 100% digital</h2>
+                <div class="image">
+                    <img src="img/card-neon-frnt.png" class="card-front" alt="Cartão Neon Frente">
+                    <img src="img/card-neon-back.png" class="card-back" alt="Cartão Neon Trás">
+                    <img src="img/circle-cards-neon.svg" class="circle" alt="Circulo Card neon">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
