--- a/index.html
+++ b/index.html
@@ -68,6 +68,88 @@
         </div>
     </section>
 
+    <section class="s-card-neon">
+        <div class="container">
+            <div class="left-area">
+                <div class="ilustra-mockup">
+                    <img src="img/circle-mockup.svg" class="circle" alt="">
+                    <img src="img/mockup.svg" class="mockup" alt="">
+                </div>
+                <div class="text">
+                    <div class="icon">
+                        <img src="img/icon-neon.svg" alt="">
+                    </div>
+                    <div class="info-txt">
+                        <h3>Baixe nosso app</h3>
+                        <p>Que tal abrir uma conta digital para ver como a gente faz a sua vida muito mais simples?</p>
+                        <ul>
+                            <li>
+                                <a href="" target="_blank">
+                                    <img src="img/apple-store.svg" alt="Logo da Apple">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">
+                                    <img src="img/google-play.svg" alt="Logo da Google">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="right-area">
+                <div class="main-text">
+                    <h2>Resolva sua vida direto pelo app Neon!</h2>
+                    <ul>
+                        <li>
+                            <div class="info">
+                                <img src="/img/icon-cartao-credito.svg" class="icon" alt="Icone de cartão de crédito">
+                                <div class="txt">
+                                    <h3>Cartão de crédito sem anuidade</h3>
+                                    <p>Conta digital com cartão de crédito sem anuidade e sem complicação</p>
+                                </div>
+                            </div>
+                            <img src="/img/arrow-right.svg" alt="Arrow">
+                        </li>
+                        <li>
+                            <div class="info">
+                                <img src="/img/icon-taxas.svg" class="icon" alt="Icone de taxas ">
+                                <div class="txt">
+                                    <h3>Sem taxas</h3>
+                                    <p>Transferências, boletos de depósito e outros serviços gratuitos</p>
+                                </div>
+                            </div>
+                            <img src="/img/arrow-right.svg" alt="Arrow">
+                        </li>
+                        <li>
+                            <div class="info">
+                                <img src="/img/icon-investimentos.svg" class="icon" alt="Icone de investimentos">
+                                <div class="txt">
+                                    <h3>Mais investimentos</h3>
+                                    <p>Rendem mais que a poupança e você resgata quando quiser</p>
+                                </div>
+                            </div>
+                            <img src="/img/arrow-right.svg" alt="Arrow">
+                        </li>
+                    </ul>
+                    <a href="" class="btn">Conheça outros produtos</a>
+                </div>
+                <div class="box-card">
+                    <div class="text">
+                        <h2>Neon Pejota</h2>
+                        <h3>Contas digitais PJ gratuitas para decolar seu negócio!</h3>
+                        <p>As melhores contas para fazer pegamentos, compras e receber dos seus clientes.</p>
+                        <div class="btns">
+                            <button class="btn-primary">Sou MEI</button>
+                            <button class="btn-primary">Sou ME</button>
+                        </div>
+                    </div>
+                    <img src="/img/card-front-pj.svg" class="image" alt="Imagem cartão PJ">
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
